Bug 58779 - "Ctrl+P". print dialog not shown. prints file directly
Summary: "Ctrl+P". print dialog not shown. prints file directly
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Printing and PDF export (show other bugs)
Version:
(earliest affected)
4.0.0.0.beta1
Hardware: Other All
: medium major
Assignee: Noel Power
URL:
Whiteboard: target:4.1.0 target:4.0.0.1
Keywords: regression
Depends on:
Blocks: Print-Directly mab4.0
  Show dependency treegraph
 
Reported: 2012-12-26 11:06 UTC by tommy27
Modified: 2017-09-24 09:47 UTC (History)
8 users (show)

See Also:
Crash report or crash signature:


Attachments
Print button help. (25.48 KB, image/png)
2012-12-26 22:02 UTC, m.a.riosv
Details
"File/Print" button (122.49 KB, image/jpeg)
2012-12-27 09:54 UTC, tommy27
Details

Note You need to log in before you can comment on or make changes to this bug.
Description tommy27 2012-12-26 11:06:09 UTC
1- open a random Writer document

2- click "print" button

expected behaviour: "print dialog" windows opens up asking to choose which pages you wanna print

current behaviour: no "print dialog" is shown and all pages of the document are printed directly.

this seems a recent regression.

works fine in:
Version 4.0.0.0.beta1+ (Build ID: 546faa79bf3b1e4b222f182d43a9839106a398d)

bug is present in: 
Version 4.0.0.0.beta1+ (Build ID: 028fb7162b602d7cdcabac016bb54a7d14960fc) 

have not tried yet in beta2.


is this bug a side effect of the fix of Bug 58403 ?
Comment 1 s-joyemusequna 2012-12-26 18:19:51 UTC
Confirmed with LOdev 4.0 Beta 2 and Windows Vista 64.
Comment 2 tommy27 2012-12-26 18:38:26 UTC
I confirm it too on Version 4.0.0.0.beta2+ (Build ID: 350ae8294a8df78403fd8cdce56b9aeb8178e13)

tested on Windows Vista 64bit

added to the mab4.0 list since it has effect on a very basic and frequently used function.
Comment 3 john.pratt 2012-12-26 21:51:18 UTC
If this in the button on the toolbar then is this not how it is meant to work?  The tooltip I get is "print file directly" which indicates there will not be an options dialogue (and this is how it worked in 3.5.x).

I suggest this is notabug.
Comment 4 m.a.riosv 2012-12-26 22:02:15 UTC
Created attachment 72151 [details]
Print button help.

Hi tommy27,
as I know, print button, print directly without print box in all versions.
Putting the mouse over the button the tip shows how it works.
Attached screenshot showing the button help.
To access directly to the print box the shortcut is Ctrl+P as in many programs.
Comment 5 m.a.riosv 2012-12-26 22:04:15 UTC
Status changed to not a bug. Please if you are not agree, reopen it.
Comment 6 Ruslan Kabatsayev 2012-12-26 22:29:29 UTC
In fact, I'd rather change the wording of the bug description: the real problem is not with the "Print" button. It's instead with Ctrl+P, which also sends file directly to printer. And this is really a recent regression which I was about to report, but came across this report.
Should I reopen this bug or create a new one with new description?
Comment 7 tommy27 2012-12-26 22:40:16 UTC
@Ruslan

yes. the regression is about "Ctrl+P" bahaviour, not showing the print dialog and printing directly the whole document

forgot to say that my "Print" toolbar button refers to "Ctrl+P"

so, changing the TITLE and REOPENING the bug.
Comment 8 m.a.riosv 2012-12-26 23:17:14 UTC
Ok.

But I can not reproduce it with:
Win7x64 Ultimate
Version 4.0.0.0.beta2 (Build ID: 4104d660979c57e1160b5135634f732918460a0)

Verify that the assignation for Ctrl+P in Menu/Tools/Customize - Keyboard for LoDev is Print.

Have you tried resetting the user profile?. Sometimes solves strange issues.
https://wiki.documentfoundation.org/UserProfile
Comment 9 tommy27 2012-12-27 09:54:19 UTC
Created attachment 72175 [details]
"File/Print" button

still confirming the bug after resetting the user profile. LOdev beta2 on Vista 64bit.

the "Print" button you find under the "File" menu and which is assigned to the "Ctrl+P" hotkey should open the Print dialog, while still prints directly the file.

basically the "Print" button now behaves exactly as the "Print directly" button.

they have the same icon but should have different effects... 
read description under: "Tools/Customize/Menus/Add/Documents"
Comment 10 m.a.riosv 2012-12-27 11:22:37 UTC
I can reproduce now with the latest version
Win7x64 Ultimate
Version 4.0.0.0.beta2+ (Build ID: 350ae8294a8df78403fd8cdce56b9aeb8178e13)

But only in writer, spreadsheet/draw/impress open the box with Ctrl+P.
Comment 11 tommy27 2012-12-27 12:27:16 UTC
(In reply to comment #10)
> I can reproduce now with the latest version
> But only in writer, spreadsheet/draw/impress open the box with Ctrl+P.

that's true. the "Ctrl+P" bug affects only Writer.
Comment 12 john.pratt 2012-12-27 12:31:19 UTC
I cannot reproduce this bug in 4.0beta2 running on Windows XP, so maybe not all windows versions affected.
Comment 13 m.a.riosv 2012-12-27 12:52:17 UTC
Hi @John.pratt,
is new for me in:
4.0.0.0.beta2+ (Build ID: 350ae8294a8df78403fd8cdce56b9aeb8178e13)

but not was in:
4.0.0.0.beta2 (Build ID: 4104d660979c57e1160b5135634f732918460a0)
Comment 14 john.pratt 2012-12-27 21:58:36 UTC
@mariosv
OK - I have checked and I am using 4.0.0beta2 (not 2+)
Comment 15 tommy27 2012-12-28 15:27:22 UTC
retested on Windows XP 32-bit and Windows 7 64-bit.

bug reproducible in:
Version 4.0.0.0.beta1+ (Build ID: 028fb7162b602d7cdcabac016bb54a7d14960fc) 
Version 4.0.0.0.beta2+ (Build ID: 350ae8294a8df78403fd8cdce56b9aeb8178e13)

so, according to these tests and previous done on Vista 64-bit, all Windows version are affected.

as already pointed out in Comment 1, the bug is not present in ealy beta1+ versions like:

Version 4.0.0.0.beta1+ (Build ID: 546faa79bf3b1e4b222f182d43a9839106a398d)
which come from the first week of december

hence the regression took place in following beta1+ and beta2+ releases.

I suspect (but I could be wrong) that this is a side effect of this committ.

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1e882f60013bae90b734a8f2ad90421550b39e83&g=libreoffice-4-0

I still see this as a 4.0 MAB
Comment 16 Jorendc 2012-12-30 13:32:24 UTC
Not windows only, I can reproduce using Ubuntu 12.10. This is indeed writer only so far.

not reproducible with LO 4.1.0.0.alpha0+ (Build ID: 8450a99c744e9005f19173e4df35d65640bcf5c) (-> latest version I can git bisect)

reproducible with own build: LibreOffice 4.1.0.0.alpha0+ (Build ID: 26a0979711f89915508359a9804765d934631ec).
Comment 17 Jorendc 2012-12-30 13:59:52 UTC
Mac OSX 10.8.2:

CAN'T reproduce using:
4.0.0.0.beta2 (Bouw-id: 4104d660979c57e1160b5135634f732918460a0)
TinderBox: MacOSX TDF Release, Branch:libreoffice-4-0, Time: 2012-12-18_17:13:13

4.1.0.0.alpha0+ (Build ID: 413d1a932eb4c47510dd05905c1ff467cb186d0)
TinderBox: MacOSX-Intel@1-built_no-moz_on_10.6.8, Branch:master, Time: 2012-12-19_04:13:37


CAN reproduce with:
4.1.0.0.alpha0+ (Build ID: 9e0dbe9f8c1fa9d2c50895985fe2c374fa9364a)
TinderBox: MacOSX-Intel@1-built_no-moz_on_10.6.8, Branch:master, Time: 2012-12-24_02:05:10

4.1.0.0.alpha0+ (Build ID: bb51791ae49ecded0f618b4534893adb8fcf917)
TinderBox: MacOSX-Intel@1-built_no-moz_on_10.6.8, Branch:master, Time: 2012-12-22_01:05:08

4.1.0.0.alpha0+ (Build ID: 40dc1210cbb785136e24150f06596cacf8e4ffe)
TinderBox: MacOSX-Intel@1-built_no-moz_on_10.6.8, Branch:master, Time: 2012-12-21_00:15:27


CAN'T reproduce using 
4.1.0.0.alpha0+ (Build ID: 1e65f0176a9243274971321ffa5b6462130904e)
TinderBox: MacOSX-Intel@1-built_no-moz_on_10.6.8, Branch:master, Time: 2012-12-20_00:42:24

So bug is entered between December 20_00:42:24 and December 21_00:15:27 in LO 4.1
Comment 18 tommy27 2013-01-02 13:04:04 UTC
regarding Comment 8, Comment 12 and Comment 17 

I still reproduce it on latest 4.0.0.0.beta2+ (Build ID: 5ee54bcb9c7713c7233b0bb9f7671c6e6104758) (2013-01-02_08.49.10) (Vista 64bit)

from my tests the bug first appeared in the middle of December during 4.0 beta1 phase, then it has always been present till today... I did not encounter any beta2 version where it worked.
Comment 19 Noel Power 2013-01-03 10:43:55 UTC
(In reply to comment #15)
> http://cgit.freedesktop.org/libreoffice/core/commit/
> ?id=1e882f60013bae90b734a8f2ad90421550b39e83&g=libreoffice-4-0
>

it's possible, I will check, I read further down that this appears to be a writer only bug? ( that's really odd )
Comment 20 Noel Power 2013-01-03 10:58:54 UTC
I'll take it, confirmed that the commit mentioned above does indeed seem to introduce the regression :-/
Comment 21 tommy27 2013-01-03 12:17:58 UTC
(In reply to comment #19)
> (In reply to comment #15)
> 
> it's possible, I will check, I read further down that this appears to be a
> writer only bug? ( that's really odd )


Yes, "Ctrl+P" print dialog is broken just in Writer. 
It works in Calc, Draw and Impress.
Comment 22 Not Assigned 2013-01-03 14:03:34 UTC
Noel Power committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=446ac227bf3477ac3041d87bd0d880c3d61f4208

fix fdo#58779 fdo#58403 re. raise print dialog



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 23 Not Assigned 2013-01-03 14:19:30 UTC
Noel Power committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2e340c01bb84cd215bfe4cc091a73756423f4647&h=libreoffice-4-0

fix fdo#58779 fdo#58403 re. raise print dialog


It will be available in LibreOffice 4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 24 Ruslan Kabatsayev 2013-01-03 15:41:24 UTC
I confirm that it's fixed in current master.
Comment 25 Noel Power 2013-01-03 15:50:58 UTC
marking as fixed then
Comment 26 tommy27 2013-01-04 21:14:29 UTC
I confirm it's fixed in latest Version 4.0.0.0.beta2+ (Build ID: 65deb382fb2bc45192f3b9224bf0fca00955ee7)

thanks Noel
Comment 27 Jorendc 2013-01-11 22:02:22 UTC
Because we all can conclude it's fixed, I would say "Thank you Noel Power" :-).
Therefore also -> VERIFIED FIXED