fix fdo#58779 fdo#58403 re. raise print dialog

adds another tweak that had been removed with some print related rewrite

Change-Id: If63072c9b2c6158d46f26933fd54766fd808569c